--- a/Projeto.Presentation.Mvc/Projeto.Presentation.Mvc.csproj
+++ b/Projeto.Presentation.Mvc/Projeto.Presentation.Mvc.csproj
@@ -5,12 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Projeto.Repository.SqlServer\Projeto.Repository.SqlServer.csproj" />
   </ItemGroup>
 
 </Project>
