--- a/Projeto.Presentation.Mvc/appsettings.json
+++ b/Projeto.Presentation.Mvc/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "connectionString": {
+  "ConnectionStrings": {
     "Projeto": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ProjetoPraticoAula07;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
